--- a/src/components/organisms/AssetContent/Pricing/FormPricing/Dynamic.module.css
+++ b/src/components/organisms/AssetContent/Pricing/FormPricing/Dynamic.module.css
@@ -40,7 +40,7 @@
   margin-left: -2rem;
   margin-right: -2rem;
   border-bottom: 1px solid var(--border-color);
-  background: var(--brand-grey-dimmed);
+  background: var(--background-highlight);
 }
 
 @media screen and (min-width: 40rem) {
